--- a/bookings.html
+++ b/bookings.html
@@ -5,100 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book a Session - Tutormee</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <style>
-        :root {
-            --sociology: #ffc300;
-            --psychology: #a259d9;
-            --chemistry: #38b000;
-            --biology: #00b4d8;
-            --physics: #4361ee;
-            --header: #fff;
-            --text: #222;
-            --accent: #f72585;
-        }
-        body {
-            font-family: 'Segoe UI', Arial, sans-serif;
-            margin: 0; padding: 0;
-            background: #f8f9fa;
-            color: var(--text);
-        }
-        header {
-            background: linear-gradient(90deg, var(--sociology), var(--psychology), var(--chemistry), var(--biology), var(--physics));
-            color: var(--header);
-            text-align: center;
-            padding: 2rem 1rem 1rem 1rem;
-        }
-        .website-link {
-            margin-top: 0.5rem;
-            font-size: 1.1rem;
-        }
-        .website-link a {
-            color: var(--header);
-            text-decoration: underline;
-        }
-        nav {
-            background: var(--header);
-            box-shadow: 0 2px 8px #0001;
-            padding: 1rem;
-            text-align: center;
-        }
-        nav a {
-            margin: 0 1rem;
-            color: var(--accent);
-            text-decoration: none;
-            font-weight: bold;
-            transition: color 0.2s;
-        }
-        nav a:hover {
-            color: var(--physics);
-        }
-        .container {
-            max-width: 400px;
-            margin: 2.5rem auto;
-            background: #fff;
-            padding: 2rem 1.5rem;
-            border-radius: 16px;
-            box-shadow: 0 2px 12px #0002;
-            text-align: center;
-        }
-        h2 { color: var(--accent); text-align: center; margin-bottom: 30px; }
-        select {
-            width: 100%;
-            padding: 0.8rem;
-            border-radius: 8px;
-            border: 1px solid #ccc;
-            font-size: 1rem;
-        }
-        .cta-btn {
-            background: var(--accent);
-            color: #fff;
-            padding: 1rem 2rem;
-            border-radius: 40px;
-            text-decoration: none;
-            font-weight: bold;
-            margin-top: 1.5rem;
-            display: inline-block;
-            border: none;
-            font-size: 1.1rem;
-            cursor: pointer;
-            transition: background 0.2s;
-        }
-        .cta-btn:hover {
-            background: var(--physics);
-        }
-        footer {
-            background: var(--accent);
-            color: #fff;
-            text-align: center;
-            padding: 1.5rem 1rem 1rem 1rem;
-            margin-top: 2rem;
-            font-size: 1.1rem;
-        }
-        footer a {
-            color: #fff;
-            text-decoration: underline;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -113,75 +20,72 @@
         <a href="Our-services.html">Our Services</a>
         <a href="bookings.html">Bookings</a>
         <a href="videos.html">Videos</a>
+        <a href="contact-us.html">Contact Us</a>
         <a href="login.html">Admin Login</a>
     </nav>
-    <div class="container">
+    <div class="container" id="booking-page-container">
         <h2>Book a Tutoring Session</h2>
-        <p>Select an available slot and book your free consultation.</p>
-        <select id="available-dates"></select>
-        <a id="book-btn" class="cta-btn" style="margin-top:1.5rem;cursor:pointer;">Book This Slot</a>
+        <p>Please select an available time slot below.</p>
+        <select id="available-slots-dropdown"><option>Loading...</option></select>
+        <button id="next-step-btn" class="cta-btn">Next Step</button>
     </div>
     <footer>
-        &copy; 2025 Tutormee | <a href="https://www.Tutormee.co.uk" target="_blank">www.Tutormee.co.uk</a>. All rights reserved.
+        &copy; 2025 Tutormee | <a href="https://www.Tutormee.co.uk" target="_blank">www.Tutormee.co.uk</a>
     </footer>
-    <!-- Firebase -->
-    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-firestore.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <script>
         const firebaseConfig = {
             apiKey: "AIzaSyAfOf2vN2YzPUAO6kfz4HSu8HYkK8TWZHY",
-            authDomain: "Tutormee-99ca8.firebaseapp.com",
-            projectId: "Tutormee-99ca8",
-            storageBucket: "Tutormee-99ca8.appspot.com",
+            authDomain: "tutorme-99ca8.firebaseapp.com",
+            databaseURL: "https://tutorme-99ca8-default-rtdb.europe-west1.firebasedatabase.app",
+            projectId: "tutorme-99ca8",
+            storageBucket: "tutorme-99ca8.appspot.com",
             messagingSenderId: "1012080798952",
-            appId: "1:1012080798952:web:e9067e9a68bb1841e72d5d"
+            appId: "1:1012080798952:web:e9067e9a68bb1841e72d5d",
+            measurementId: "G-L8TJGV46E6"
         };
+        
         firebase.initializeApp(firebaseConfig);
-        const db = firebase.firestore();
+        const db = firebase.database();
 
-        const availableDates = document.getElementById('available-dates');
-        const bookBtn = document.getElementById('book-btn');
+        const slotsDropdown = document.getElementById('available-slots-dropdown');
+        const nextStepBtn = document.getElementById('next-step-btn');
 
-        // Clear any existing options
-        availableDates.innerHTML = "";
+        const formatDate = (iso) => new Date(iso).toLocaleString('en-GB', { dateStyle: 'full', timeStyle: 'short' });
+        const slotsRef = db.ref('availableSlots').orderByChild('date');
 
-        db.collection("availableSlots")
-          .where("booked", "==", false)
-          .orderBy("date")
-          .get()
-          .then((querySnapshot) => {
-            // Get current time + 1 hour (in ms)
-            const now = Date.now();
-            const minTime = now + 60 * 60 * 1000; // 1 hour from now
-
-            let hasValid = false;
-            querySnapshot.forEach((doc) => {
-                const slotDate = new Date(doc.data().date).getTime();
-                if (slotDate > minTime) {
-                    let option = document.createElement("option");
-                    option.value = doc.id;
-                    option.text = new Date(doc.data().date).toLocaleString();
-                    availableDates.appendChild(option);
-                    hasValid = true;
-                }
-            });
-
-            if (!hasValid) {
-                let option = document.createElement("option");
-                option.text = "No available slots";
-                availableDates.appendChild(option);
-                availableDates.disabled = true;
-                bookBtn.style.display = "none";
-            } else {
-                availableDates.disabled = false;
-                bookBtn.style.display = "inline-block";
+        slotsRef.once('value').then((snapshot) => {
+            slotsDropdown.innerHTML = "";
+            let hasSlots = false;
+            if (snapshot.exists()) {
+                snapshot.forEach((child) => {
+                    const slot = child.val();
+                    if (!slot.isBooked && new Date(slot.date) > new Date()) {
+                        hasSlots = true;
+                        const option = document.createElement("option");
+                        option.value = child.key;
+                        option.textContent = formatDate(slot.date);
+                        slotsDropdown.appendChild(option);
+                    }
+                });
             }
-          });
 
-        bookBtn.onclick = function() {
-            const selectedDateId = availableDates.value;
-            if (selectedDateId && !availableDates.disabled) {
-                window.location.href = "book.html?slot=" + encodeURIComponent(selectedDateId);
+            if (!hasSlots) {
+                slotsDropdown.innerHTML = "<option>No available slots.</option>";
+                slotsDropdown.disabled = true;
+                nextStepBtn.disabled = true;
+            } else {
+                slotsDropdown.disabled = false;
+                nextStepBtn.disabled = false;
+            }
+        });
+
+        nextStepBtn.onclick = function() {
+            const selectedSlotId = slotsDropdown.value;
+            if (selectedSlotId && !slotsDropdown.disabled) {
+                window.location.href = `book.html?slotId=${encodeURIComponent(selectedSlotId)}`;
             }
         };
     </script>
