--- a/login.html
+++ b/login.html
@@ -2,142 +2,69 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Login - Tutormee</title>
+    <title>Admin Sign In - Tutormee</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <style>
-        :root {
-            --sociology: #ffc300;
-            --psychology: #a259d9;
-            --chemistry: #38b000;
-            --biology: #00b4d8;
-            --physics: #4361ee;
-            --accent: #f72585;
-            --header: #fff;
-            --text: #222;
-        }
-        body {
-            font-family: 'Segoe UI', Arial, sans-serif;
-            margin: 0;
-            background: #f8f9fa;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-        }
-        header {
-            background: linear-gradient(90deg, var(--sociology), var(--psychology), var(--chemistry), var(--biology), var(--physics));
-            color: var(--header);
-            text-align: center;
-            padding: 2rem 1rem 1rem 1rem;
-        }
-        .container {
-            flex: 1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 2rem;
-        }
-        .login-box {
-            background: #fff;
-            padding: 2.5rem;
-            border-radius: 16px;
-            box-shadow: 0 2px 12px #0002;
-            width: 100%;
-            max-width: 400px;
-            text-align: center;
-        }
-        h2 {
-            color: var(--accent);
-            margin-bottom: 2rem;
-        }
-        .form-group {
-            margin-bottom: 1.5rem;
-            text-align: left;
-        }
-        input[type="email"], input[type="password"] {
-            width: 100%;
-            padding: 0.75rem;
-            border: 1px solid #ccc;
-            border-radius: 8px;
-            box-sizing: border-box; /* Important */
-        }
-        .btn {
-            background: var(--accent);
-            color: #fff;
-            border: none;
-            border-radius: 20px;
-            padding: 0.75rem 1.5rem;
-            font-size: 1.1rem;
-            cursor: pointer;
-            width: 100%;
-            transition: background 0.2s;
-        }
-        .btn:hover {
-            background: var(--physics);
-        }
-        #error-message {
-            color: var(--accent);
-            margin-top: 1rem;
-            font-weight: bold;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <header>
-        <h1>Tutormee</h1>
-        <p>Admin Login</p>
-    </header>
-
-    <div class="container">
-        <div class="login-box">
-            <h2>Sign In</h2>
-            <form id="login-form">
-                <div class="form-group">
-                    <input type="email" id="email" placeholder="Email" required>
-                </div>
-                <div class="form-group">
-                    <input type="password" id="password" placeholder="Password" required>
-                </div>
-                <button type="submit" class="btn">Login</button>
-            </form>
-            <p id="error-message"></p>
-        </div>
+<body class="login-body">
+    <div class="login-container">
+        <h1>Admin Sign In</h1>
+        <p>Please enter your credentials to access the dashboard.</p>
+        <form id="login-form">
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" id="email" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" id="password" required>
+            </div>
+            <button type="submit" class="btn">Sign In</button>
+        </form>
+        <p id="error-message"></p>
     </div>
 
-    <!-- Firebase -->
-    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script>
         const firebaseConfig = {
             apiKey: "AIzaSyAfOf2vN2YzPUAO6kfz4HSu8HYkK8TWZHY",
-            authDomain: "Tutormee-99ca8.firebaseapp.com",
-            projectId: "Tutormee-99ca8",
-            storageBucket: "Tutormee-99ca8.appspot.com",
+            authDomain: "tutorme-99ca8.firebaseapp.com",
+            databaseURL: "https://tutorme-99ca8-default-rtdb.europe-west1.firebasedatabase.app",
+            projectId: "tutorme-99ca8",
+            storageBucket: "tutorme-99ca8.firebasestorage.app",
             messagingSenderId: "1012080798952",
-            appId: "1:1012080798952:web:e9067e9a68bb1841e72d5d"
+            appId: "1:1012080798952:web:e9067e9a68bb1841e72d5d",
+            measurementId: "G-L8TJGV46E6"
         };
-        firebase.initializeApp(firebaseConfig);
+
+        const app = firebase.initializeApp(firebaseConfig);
         const auth = firebase.auth();
 
-        document.getElementById('login-form').addEventListener('submit', e => {
+        const loginForm = document.getElementById('login-form');
+        const emailInput = document.getElementById('email');
+        const passwordInput = document.getElementById('password');
+        const errorMessage = document.getElementById('error-message');
+        const submitButton = loginForm.querySelector('.btn');
+
+        loginForm.addEventListener('submit', (e) => {
             e.preventDefault();
-            const email = document.getElementById('email').value;
-            const password = document.getElementById('password').value;
-            const errorMessage = document.getElementById('error-message');
-            errorMessage.textContent = ''; // Clear previous errors
+            const email = emailInput.value;
+            const password = passwordInput.value;
+            errorMessage.textContent = '';
+            submitButton.disabled = true;
+            submitButton.textContent = 'Signing In...';
 
             auth.signInWithEmailAndPassword(email, password)
-                .then(userCredential => {
-                    // Sign in success. Redirect to the protected dashboard.
-                    console.log('Login successful, redirecting to dashboard...');
-                    
-                    // --- THIS IS THE CORRECTED LINE ---
-                    window.location.href = 'dashboard.html'; 
+                .then((userCredential) => {
+                    console.log('Signed in successfully! Redirecting to dashboard...');
+                    window.location.href = 'dashboard.html';
                 })
-                .catch(error => {
-                    // Handle Errors here.
-                    errorMessage.textContent = error.message;
+                .catch((error) => {
+                    errorMessage.textContent = 'Invalid email or password.';
+                    submitButton.disabled = false;
+                    submitButton.textContent = 'Sign In';
                 });
         });
     </script>
